# fastapi-api

./: .env  AGENTS.md  README.md  REDIS_TOKEN_IMPLEMENTATION.md  db.txt  ds.sql  main.py  monodbsql.sql  package.json  pyproject.toml  start.sh  test_redis_async.py
.github/: copilot-instructions.md
app/: config.py  database.py  dependencies.py  main.py  models.py  redis_client.py  schemas.py  utils.py
app/routers/: admin.py  auth.py  movies.py  reviews.py  user.py
app/services/: token_service.py
scripts/: init_db.py  make_admin.py  make_user.py  seed_data.py
